--- a/ayodeji.css
+++ b/ayodeji.css
@@ -1,16 +1,16 @@
 body {
 	background: beige;
-  	width: 80%;
-	max-width: 800px; 
+  	width: 60%;
+	max-width: 600px; 
 	margin: 10px auto;
-	padding: 20px;
+	padding: 10px;
 	border: 0.1px solid beige; 
 }
 table {
 	font-family: Arial, Helvetica, sans-serif;
-	width: 1000px;
-	padding: 10px;
-	border: 1px solid beige;
+	/*width: 1000px;*/
+	/*padding: 10px;
+	border: 1px solid beige;*/
 	
 }
 a {
@@ -20,4 +20,35 @@ a {
 a:hover {
 	color: darkred;
 
+}
+.myButton {
+	background-color:#44c767;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.myButton:hover {
+	background-color:#5cbf2a;
+}
+.myButton:active {
+	position:relative;
+	top:1px;
+}
+@media screen and (max-width: 600px) {
+  .screen-body {
+    padding: 40px;
+  }
+
+  .screen-body-item {
+    padding: 0;
+  }
 }
